<resources>
    <string name="app_name">Гео-Зарядка</string>
    <string name="Hello_1">Готовы к лёгкой зарядке?</string>
    <string name="Hello_2">Здесь мы развиваем память и запоминаем столицы государств!</string>
    <string name="ListCanScroll">(иногда список можно листать)</string>
    <string name="withALetter">на букву ..?</string>
    <string name="changeColor">Сменить цвет</string>
    <string name="question_general_text">Выберите <b>правильную</b> столицу для данной страны:</string>
    <string name="ToListTren">Новая тренировка</string>
    <string name="wait_answer">Нажмите на правильную столицу</string>
    <string name="correct_answer">Верный ответ!</string>
    <string name="incorrect_answer">Это было случайное недоразумение...</string>
    <string name="prompt_country">Правильная столица страны:</string>
    <string name="prompt_country_eto"> - это: </string>
    <string name="result_main">Поздравляем, Вы прошли тестирование!</string>
    <string name="result_1">Правильных ответов:</string>
    <string name="result_2">Цифра прав.ответов</string>
    <string name="result_3">Допущенных неточностей:</string>
    <string name="result_4">Цифра ошибок</string>
    <string name="button_back">Выбрать тренировку</string>
    <string name="button_knowlege">База знаний</string>
    <string name="button_repeat">Повторить</string>
    <string name="correct_answer_1">Каждый правильный ответ</string>
    <string name="correct_answer_2">делает Вас</string>
    <string name="correct_answer_3"><b>умнее</b>!</string>
    <string name="correct_answer_4">Продолжайте в том же духе!</string>
    <string name="tren_correct">Верные ответы:</string>
    <string name="tren_incorrect">Неточности:</string>
    <string name="ButtonWorkout">Я всё знаю!</string>
    <string name="ButtonStudy">Надо подумать</string>
    <string name="ButtonPrompt">-?-</string>
    <string name="ToMain">Вернуться на главную</string>
    <string name="ButtonTren20">Школьник</string>
    <string name="ButtonTren20_text">(20 самых крупных стран, по объёму ВВП)</string>
    <string name="ButtonTren20_text_1">Выберите правильную столицу для 20 самых крупных стран</string>
    <string name="ButtonTren50">Студент</string>
    <string name="ButtonTren50_text">(50 самых крупных стран, по объёму ВВП)</string>
    <string name="ButtonTren50_text_1">Выберите правильную столицу для 50 самых крупных стран</string>
    <string name="ButtonTren100">Учитель географии</string>
    <string name="ButtonTren100_text">(100 самых крупных стран, по объёму ВВП)</string>
    <string name="ButtonTren100_text_1">Выберите правильную столицу для 100 самых крупных стран</string>
    <string name="ButtonTrenOON">Посол при ООН</string>
    <string name="ButtonTrenOON_text">(страны входящие в ООН, 190+ стран)</string>
    <string name="ButtonTrenOON_text_1">Выберите правильную столицу для стран (с правом голоса), входящих в стостав ООН</string>
    <string name="ButtonTrenAll">СуперГеограф</string>
    <string name="ButtonTrenAll_text">(все страны и государственные образования, 240+)</string>
    <string name="ButtonTrenAll_text_1">Выберите правильную столицу для всех стран и государственных образований из нашей базы</string>
    <string name="Logo">Планета Земля</string>
    <string name="Country_State">Страна - Столица</string>
    <string name="CountryList">Страны и их столицы</string>
    <string name="Prompt">От автора:</string>
    <string name="Prompt_text_1">Страна - территория, имеющая чётко определённые (либо размытые) географические, политические, исторические и другие границы (рубежи).</string>
    <string name="Prompt_text_2">Страны бывают разных типов и могут обладать собственным суверенитетом или находиться под влиянием. Также некоторые страны имеют статус частично признанных (их независимость признали далеко не все страны).</string>
    <string name="Prompt_text_3">В данном тренажёре мы собрали страны и государственные образования, существующие в наши исторические дни.</string>
    <string name="Prompt_text_4">Следует отметить, что мир вокруг нас не является статичной картинкой. Каждый день принимаются решения, меняющие историю. И каждый из нас своим поведением принимает в этом процессе активное участие.</string>
    <string name="Prompt_text_5">P.S.</string>
    <string name="Prompt_text_6">Ваши идеи, мысли и советы Вы можете оставить в нашей телеграм-группе:</string>
    <string name="Prompt_PrivacyPolicyButtonText">Политика конфиденциальности</string>
    <string name="PrivacyPolicy_text_1">Политика конфиденциальности мобильного приложения Гео-Зарядка</string>
    <string name="PrivacyPolicy_text_2">1.Общие термины и понятия</string>
    <string name="PrivacyPolicy_text_3">1.1.Автором мобильного приложения является Корнев Михаил Юрьевич, далее «Разработчик».</string>
    <string name="PrivacyPolicy_text_4">1.2.«Приложение» - совокупность интегрированной в программную оболочку информации (программа), предназначенной для установки (загрузки) на мобильное устройство пользователя (в том числе планшеты и любые другие устройства, позволяющие осуществлять взаимодействие с Приложением).</string>
    <string name="PrivacyPolicy_text_5">1.3.«Пользователь» - физическое лицо, осуществляющее непосредственное взаимодействие с элементами приложения (просмотр видимой части, взаимодействие с навигацией и т.д.).</string>
    <string name="PrivacyPolicy_text_6">1.4.Политика конфиденциальности в отношении передачи данных между Разработчиком и Пользователем регулируется настоящим соглашением, далее «Политика».</string>
    <string name="PrivacyPolicy_text_7">ПРИМЕЧАНИЕ:</string>
    <string name="PrivacyPolicy_text_8">А) Если возраст Пользователя составляет менее 18 (восемнадцати) лет, Пользователь для понимания условий настоящей Политики обязан ознакомиться с настоящей Политикой вместе со своим родителем (опекуном) или законным представителем.</string>
    <string name="PrivacyPolicy_text_9">Б) Вы также соглашаетесь с тем, что любые пункты и формулировки настоящей Политики могут быть в любой момент изменены без каких-либо уведомлений, новая редакция Политики вступает в силу с момента её опубликования.</string>
    <string name="PrivacyPolicy_text_10">В) Пользователь обязуется самостоятельно и регулярно проверять положения данной Политики на предмет внесения каких-либо изменений. Кроме того, Пользователь обязуется после каждого обновления проверять данную Политику на предмет внесения изменений, вне зависимости, указаны такие изменения Политики в обновлении или нет.</string>
    <string name="PrivacyPolicy_text_11">Г) В случае если Пользователь не согласен с каким-либо пунктом данной Политики, он обязан немедленно удалить Приложение со своего устройства. Факт использования Приложения подразумевает согласие Пользователя с Политикой.</string>
    <string name="PrivacyPolicy_text_12">2.Передача данных</string>
    <string name="PrivacyPolicy_text_13">2.1.Пользователь дает Разработчику согласие на обработку и передачу персональных данных Пользователя, исключительно в целях обеспечения работоспособности приложения и его последующей настройки и модернизации (отчёты об ошибках, сбоях, аналитика, статистика и т.д.).</string>
    <string name="PrivacyPolicy_text_14">2.2.Кроме того, пользователь даёт согласие на передачу персональных данных в Google Play и Google Analytics для Firebase.</string>
    <string name="PrivacyPolicy_text_15">(Сервисы Google Play (https://www.google.com/policies/privacy/)</string>
    <string name="PrivacyPolicy_text_16">(Google Analytics для Firebase (https://firebase.google.com/policies/analytics)</string>
    <string name="PrivacyPolicy_text_17">2.3.Не взирая на все возможные способы защиты конфиденциальной информации, предпринимаемые Разработчиком, Пользователь, передавая свои личные данные, ознакомлен с тем, что любая передача персональных данных не может быть абсолютно и полностью безопасной. Поэтому Пользователь осуществляет такую передачу на свой собственный риск. Любую ответственность за любой ущерб, понесённый в результате передачи данных, Пользователь несёт самостоятельно.</string>
    <string name="PrivacyPolicy_text_18">3.	Данные журнала</string>
    <string name="PrivacyPolicy_text_19">3.1.Всякий раз, когда Пользователь использует Приложение, а также в случае ошибки в Приложении, собираются данные и информация на вашем устройстве (лог-файлы / файлы журнала / данные журнала).</string>
    <string name="PrivacyPolicy_text_20">3.2.Данные журнала могут включать в себя такую информацию, как адрес интернет-протокола («IP») вашего устройства, имя устройства, версия операционной системы, конфигурация устройства при использовании Приложения, время и дата использования Приложения и другие данные.</string>
    <string name="PrivacyPolicy_text_21">4.Файлы cookie</string>
    <string name="PrivacyPolicy_text_22">4.1.Файлы cookie – это файлы с небольшим объемом данных, которые обычно используются в качестве анонимных уникальных идентификаторов. Они отправляются в ваш браузер с веб-сайтов, которые вы посещаете, и сохраняются во внутренней памяти вашего устройства.</string>
    <string name="PrivacyPolicy_text_23">4.2.Приложение не использует эти «куки» в явном виде. Однако Приложение может использовать сторонний код и библиотеки, которые используют файлы cookie для сбора информации и улучшения качества предоставления своих услуг.</string>
    <string name="PrivacyPolicy_text_24">5.Поставщики услуг</string>
    <string name="PrivacyPolicy_text_25">5.1.Разработчик может нанимать сторонние компании и частных лиц для следующих целей:</string>
    <string name="PrivacyPolicy_text_26">5.1.1.Улучшения работы Приложения;</string>
    <string name="PrivacyPolicy_text_27">5.1.2.Предоставления Приложения от имени Разработчика;</string>
    <string name="PrivacyPolicy_text_28">5.1.3.Выполнения различных работ, связанных с оптимизацией, модернизацией или развитием Приложения;</string>
    <string name="PrivacyPolicy_text_29">5.1.4.Чтобы помочь Разработчику проанализировать, как используется Приложение.</string>
    <string name="PrivacyPolicy_text_30">5.2.Мы сообщаем Пользователям нашего Приложения, что эти третьи лица имеют доступ к их Личной информации. Причина в том, чтобы выполнять возложенные на них задачи от имени Разработчика. Однако они обязаны не разглашать и не использовать информацию для каких-либо других целей.</string>
    <string name="PrivacyPolicy_text_31">6.Конфиденциальность в отношении детей</string>
    <string name="PrivacyPolicy_text_32">6.1.Так как наше Приложение не имеет возрастных ограничений, с ним могут взаимодействовать Пользователи любого возраста (3+). Однако, непосредственное использование Приложения Пользователями, не достигшими совершеннолетия (18 лет), должно контролироваться их родителями, опекунами или другими законными представителями.</string>
    <string name="PrivacyPolicy_text_33">7.Изменения в настоящей Политике конфиденциальности</string>
    <string name="PrivacyPolicy_text_34">7.1.Время от времени мы будем обновлять нашу Политику конфиденциальности. Таким образом, Пользователю рекомендуется периодически просматривать эту страницу на предмет любых изменений.</string>
    <string name="PrivacyPolicy_text_35">7.2.Последнее обновление Политики конфиденциальности:</string>
    <string name="PrivacyPolicy_text_36">28 июля 2022 г.</string>
    <string name="PrivacyPolicy_text_37">8.Контакты</string>
    <string name="PrivacyPolicy_text_38">8.1.Пожалуйста, используйте для связи с Разработчиком следующий почтовый адрес или телеграм-канал Приложения:</string>
    <string name="PrivacyPolicy_text_39">xiwnikofnet@gmail.com</string>
    <string name="PrivacyPolicy_text_40">https://t.me/CountryCapital_app</string>
    <string name="PrivacyPolicy_button_next">Далее &gt;&gt;&gt;</string>
    <string name="PrivacyPolicy_button_back" formatted="false">&lt;&lt;&lt; Назад</string>
    <string name="CountryList_A">А</string>
    <string name="CountryLetter_A">Страны и их столицы на букву А:</string>
</resources>