<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor"
    tools:context=".PrivacyPolicy2">

  <TextView
      android:id="@+id/PP_title"
      style="@style/textTitlePrivacyPolicy"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="5dp"
      android:text="@string/PrivacyPolicy_text_1"
      android:textAlignment="center"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/button_work"
      style="@style/buttonGoToListTren"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/button_study"
      style="@style/buttonGoToBaseKnowledge"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="5dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/button_work"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/PP_title">

    <TextView
        android:id="@+id/textView15"
        style="@style/textPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PrivacyPolicy_text_17" />

    <TextView
        android:id="@+id/textView16"
        style="@style/textPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PrivacyPolicy_text_18" />

    <TextView
        android:id="@+id/textView17"
        style="@style/textPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PrivacyPolicy_text_19" />

    <TextView
        android:id="@+id/textView18"
        style="@style/textPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PrivacyPolicy_text_20" />

    <TextView
        android:id="@+id/textView20"
        style="@style/textPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PrivacyPolicy_text_21" />

    <TextView
        android:id="@+id/textView21"
        style="@style/textPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PrivacyPolicy_text_22" />

    <Button
        android:id="@+id/privacyPolicyButtonNext"
        style="@style/buttonVariantCapital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left|center_vertical"
        android:onClick="goToPrivacyPolicy1"
        android:text="@string/PrivacyPolicy_button_back" />

    <Button
        android:id="@+id/privacyPolicyButtonBack"
        style="@style/buttonVariantCapital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right|center_vertical"
        android:onClick="goToPrivacyPolicy"
        android:text="@string/PrivacyPolicy_button_next" />

  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>