<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor"
    tools:context=".Result">


    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="475dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_main"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/result_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/result_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_back" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_repeat" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>