<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_100"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor"
    tools:context=".Result_50">


    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="475dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result_main"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_main"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/result_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_1"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_3"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/listTren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonColor"
            android:onClick="goToListTren"
            android:text="@string/button_back"
            android:textColor="@color/textButtonColor" />

        <Button
            android:id="@+id/baseKnowledge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonColor"
            android:onClick="goToBaseKnowledge"
            android:text="@string/button_knowlege"
            android:textColor="@color/textButtonColor" />

        <Button
            android:id="@+id/tren50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonColor"
            android:onClick="goToTren50"
            android:text="@string/button_repeat"
            android:textColor="@color/textButtonColor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>